--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,9 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
   <script src="https://unpkg.com/marked"></script>
+  <script scr="https://unpkg.com/moment"></script>
   <title>bootstrap-vue</title>
 </head>
 
